istio-yelb-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: yelb-gateway
  namespace: yelb
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: yelb-vs
  namespace: yelb
spec:
  hosts:
  #- "*"
  - "yelb.tsm.fbclouddemo.us"
  gateways:
  - yelb-gateway
  http:
  #- match:
    #- uri:
        #prefix: /
  - route:
    - destination:
        host: yelb-ui
        port:
          number: 80
